; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkey_inject_event.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_obs_hotkey_inject_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }
%struct.obs_hotkey_internal_inject = type { i32, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }

@obs = common dso_local global %struct.TYPE_9__* null, align 8
@inject_hotkey = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_hotkey_inject_event(i64 %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_8__, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.obs_hotkey_internal_inject, align 4
  %6 = bitcast %struct.TYPE_8__* %3 to i64*
  store i64 %0, i64* %6, align 4
  store i32 %1, i32* %4, align 4
  %7 = call i32 (...) @lock()
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %26

10:                                               ; preds = %2
  %11 = getelementptr inbounds %struct.obs_hotkey_internal_inject, %struct.obs_hotkey_internal_inject* %5, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %11, align 4
  %14 = getelementptr inbounds %struct.obs_hotkey_internal_inject, %struct.obs_hotkey_internal_inject* %5, i32 0, i32 1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds %struct.obs_hotkey_internal_inject, %struct.obs_hotkey_internal_inject* %5, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** @obs, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %17, align 4
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  store i32 0, i32* %22, align 4
  %23 = load i32, i32* @inject_hotkey, align 4
  %24 = call i32 @enum_bindings(i32 %23, %struct.obs_hotkey_internal_inject* %5)
  %25 = call i32 (...) @unlock()
  br label %26

26:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @lock(...) #1

declare dso_local i32 @enum_bindings(i32, %struct.obs_hotkey_internal_inject*) #1

declare dso_local i32 @unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
